# X32-Patch-Grid

./: .gitignore  LICENSE  package-lock.json  package.json
dist-isolation/: index.html
src/: App.vue  Tabs.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/x32_osc/: connections.rs  errors.rs  mod.rs  networking.rs  types.rs
src-tauri/src/x32_osc/networking/: connection.rs
src/components/: StatusIndicator.vue
src/styles/: _colors.scss  main.scss
src/tabs/: Inputs.vue  Outputs.vue  Setup.vue
x32_osc/: Cargo.toml
x32_osc/src/: connections.rs  lib.rs  types.rs
