[package]
name = "x32-patch-grid"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "x32_patch_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-opener = "2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
network-interface = "2.0.5"
rosc = "0.11.4"
rand = "0.10.2"
